messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-green
  namespace: messaging-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-app
      variant: green
  template:
    metadata:
      labels:
        app: messaging-app
        variant: green
    spec:
      containers:
        - name: messaging-app
          image: YOUR_DOCKERHUB_USER/messaging-app:2.0
          ports:
            - containerPort: 8000
